--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
         <p>
             PUFFIN is a new pulsed-power facility at the <a href="https://www.psfc.mit.edu/">Plasma Science and Fusion Center (PSFC)</a>,
             at the Massachusetts Institute of Technology (MIT). PUFFIN (the <i>PUlser For Fundamental [Plasma Physics] INvestigations</i>) will 
-            use intense pulses of electrical current to heat solids to a high-energy-density (HED) plasma state.
+            use intense pulses of electrical current to heat initally solid loads made from thin wires or foils to a high-energy-density (HED) plasma state.
         </p>
 
         {% include image_with_caption.html
@@ -34,9 +34,10 @@ title: Home
         </p>
 
         <p>
-            We will use PUFFIN to carry out research into fundamental plasma processes, such as magnetic reconnection and
-            magneto-hydrodynamic turbulence, which underpin events such as solar flares and the transport of matter in 
+            We will use PUFFIN to carry out research into fundamental plasma processes, such as <a href="/research/reconnection/">magnetic reconnection</a> and
+            <a href="/research/turbulence/">magneto-hydrodynamic turbulence</a>, which underpin events such as solar flares and the transport of matter in 
             the accretions disks of black holes.
+			The same physical processes are important in <a href="/research/fusion/">magnetized target fusion</a>, a hybrid between the mainstream magnetically confined and inertially confined fusion concepts.
         </p>
 
         {% include link_to_poster.html
@@ -46,8 +47,8 @@ title: Home
 
         <p>
             You can find out more about PUFFIN <a href="/assets/posters/APSDPP2020_PUFFIN_Poster_lowres.pdf">in this poster</a> we 
-            presented at APS DPP 2020. PUFFIN is currently in the design phase, with construction expected to begin in 2022, 
-            and experiments in 2023. As of May 2022, some of the first components have already arrived for the facility. 
+            presented at APS DPP 2020. PUFFIN is currently in the design phase, with construction starting in 2022, 
+            and experiments in 2023. As of May 2022, the major pulsed-power components have arrived. 
             We are <a href="/work-with-us">actively seeking undergraduate and graduate students</a> to work on 
             the design and construction of PUFFIN, and subsequent experiments.
         </p>
