moved some index material to the machine

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@ title: Home
             astrophysical objects.
         </p>
 
+
+		{% 	include image_with_caption.html 
+			src="/assets/2022_07_20_PUFFIN_annotated_drawings_perspective.png" 
+			caption="The current PUFFIN design." 
+		%}
+
         <p>
             We will use PUFFIN to carry out research into fundamental plasma processes, such as <a href="/research/reconnection/">magnetic reconnection</a> and
             <a href="/research/turbulence/">magneto-hydrodynamic turbulence</a>, which underpin events such as solar flares and the transport of matter in 
             the accretions disks of black holes.
 			The same physical processes are important in <a href="/research/fusion/">magnetized target fusion</a>, a hybrid between the mainstream magnetically confined and inertially confined fusion concepts.
         </p>
-
-        {% include link_to_poster.html
-            poster="/assets/posters/APSDPP2020_PUFFIN_Poster_lowres.pdf"
-            thumbnail="/assets/posters/APSDPP2020_PUFFIN_Poster_lowres_thumbnail.png"
-        %}
-
-        <p>
-            You can find out more about PUFFIN <a href="/assets/posters/APSDPP2020_PUFFIN_Poster_lowres.pdf">in this poster</a> we 
-            presented at APS DPP 2020. PUFFIN is currently in the design phase, with construction starting in 2022, 
+		
+		<p>
+			PUFFIN is currently in the design phase, with construction starting in 2022, 
             and experiments in 2023. As of May 2022, the major pulsed-power components have arrived. 
             We are <a href="/work-with-us">actively seeking undergraduate and graduate students</a> to work on 
             the design and construction of PUFFIN, and subsequent experiments.
