--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@ title: Home
             We are <a href="/work-with-us">actively seeking undergraduate and graduate students</a> to work on 
             the design and construction of PUFFIN, and subsequent experiments.
         </p>
+		
+		<p>
+			The PUFFIN group is grateful for funding from the NSF, the NNSA, and ARPA-E.
+        </p>
     </article>
 
     {% include footer.html %}
