Update published publications, and add J. D. Hare first-author publications

--- a/research/publications.html
+++ b/research/publications.html
@@ -17,7 +17,7 @@ subpage_of: Research
     {% assign n_authors = authors | size %}
     {% assign j = 1 %}
     {% for author in authors %}
-        {% if j == n_authors %}and {% endif %}{{ author }},
+        {% if j == n_authors and author != "et al." %}and {% endif %}{{ author }},
         {% assign j = j | plus:1 %}
     {% endfor %}
         <span class="title">
