minor updates to push all future updates to the news page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: Home
 
 
 		{% 	include image_with_caption.html 
-			src="/assets/2022_07_20_PUFFIN_annotated_drawings_perspective.png" 
+			src="/assets/2023_03_24_PUFFIN_annotated_drawings_perspective.png" 
 			caption="The current PUFFIN design." 
 		%}
 
@@ -47,8 +47,7 @@ title: Home
         </p>
 		
 		<p>
-			PUFFIN is currently in the design phase, with construction starting in 2022, 
-            and experiments in 2023. As of May 2022, the major pulsed-power components have arrived. 
+			PUFFIN is currently under construction, and you can find out about the latest progress on our <a href="/news">News page</a>.
             We are <a href="/work-with-us">actively seeking undergraduate and graduate students</a> to work on 
             the design and construction of PUFFIN, and subsequent experiments.
         </p>
