--- a/research/publications.html
+++ b/research/publications.html
@@ -8,6 +8,33 @@ subpage_of: Research
 
 <h1>Our Publications</h1>
 
+<h2> Pre-Prints </h2>
+
+{% assign i = site.data.preprints | size %}
+{% for pub in site.data.preprints %}
+    <div class="publication">
+        [{{ i }}]
+    {% assign authors = pub.authors | split: ", " %}
+    {% assign n_authors = authors | size %}
+    {% assign j = 1 %}
+    {% for author in authors %}
+        {% if j == n_authors and author != "et al." %}and {% endif %}{{ author }},
+        {% assign j = j | plus:1 %}
+    {% endfor %}
+        <span class="title">
+            {% if pub.link %}
+            <a href="{{ pub.link }}">"{{ pub.title }}"</a>
+            {% else %}
+            "{{ pub.title }}"
+            {% endif %}
+        </span>,
+        <span class="journal">{{ pub.journal }}</span>,
+        {{ pub.year }}.
+    </div>
+    {% assign i = i | minus:1 %}
+{% endfor %}
+
+<h2> Publications </h2>
 
 {% assign i = site.data.publications | size %}
 {% for pub in site.data.publications %}
