--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@ title: Home
     </div>
     <article class="main-content">       
         <p>
+            <i>The PUFFIN group is moving to Cornell in January 2025.</i>)
+        </p>
+
+		
+		<p>
             PUFFIN is a new pulsed-power facility at the <a href="https://www.psfc.mit.edu/">Plasma Science and Fusion Center (PSFC)</a>,
             at the Massachusetts Institute of Technology (MIT). PUFFIN (the <i>PUlser For Fundamental [Plasma Physics] INvestigations</i>) will 
             use intense pulses of electrical current to heat initally solid loads made from thin wires or foils to a high-energy-density (HED) plasma state.
@@ -48,8 +53,6 @@ title: Home
 		
 		<p>
 			PUFFIN is currently under construction, and you can find out about the latest progress on our <a href="/news">News page</a>.
-            We are <a href="/work-with-us">actively seeking undergraduate and graduate students</a> to work on 
-            the design and construction of PUFFIN, and subsequent experiments.
         </p>
 		
 		<p>
